# gpu-stroke-expansion-paper

./: .gitignore  Makefile  README.md  angle_err.eps  arc_chord.eps  cubic_err_approx  cubic_err_approx.eps  cubic_err_approx.gnuplot  cubic_err_measured  cubic_err_measured.eps  cubic_err_measured.gnuplot  espc.eps  espc.gnuplot  espc_int  evolute_fig.eps  g_comparison.eps  gpu_plots.py  index.html  input_processing_plot.py  nehab_gpu_timings.eps  nehab_gpu_timings_strong.eps  paper.bib  paper.tex  pipeline.eps  prim_count  prim_count.eps  prim_count.gnuplot  question.eps  stroke_stills.eps  stroke_styles.eps  stroke_threads.eps  subdiv_density.eps  subdiv_density.gnuplot  tag_monoid_gpu_timings.eps  test_scenes_gpu_timings.eps  test_scenes_gpu_timings_strong.eps  test_scenes_gpu_timings_weak.eps  timings  timings.eps  timings.gnuplot  (+2 more)
bench/: Cargo.toml  README.md  arcs-mpvg-m1-max.csv  arcs-mpvg-m1-pro.csv  arcs-nehab-timings-m1-max.csv  arcs-nehab-timings-m1-pro.csv  arcs-vello-test-scenes-m1-max.csv  arcs-vello-test-scenes-m1-pro.csv  lines-mpvg-m1-max.csv  lines-mpvg-m1-pro.csv  lines-nehab-timings-m1-max.csv  lines-nehab-timings-m1-pro.csv  lines-vello-test-scenes-m1-max.csv  lines-vello-test-scenes-m1-pro.csv  mpvg-m1-max.csv  mpvg-m1-pro.csv  mpvg-nv-rtx-4090.csv  nehab-timings-m1-pro.csv  nehab-timings-nv-rtx-4090.csv  nehab2020-m1-max.cxv  test-scenes-m1-max.csv  test-scenes-m1-pro.csv  test-scenes-nv-rtx-4090.csv
bench/results/: vello-e2e-mpvg-m1-pro.csv  vello-e2e-mpvg-nv-rtx-4090.csv  vello-e2e-nehab-timings-m1-pro.csv  vello-e2e-nehab-timings-nv-rtx-4090.csv  vello-e2e-test-scenes-m1-pro.csv  vello-e2e-test-scenes-nv-rtx-4090.csv  vello-flatten-arcs-mpvg-m1-pro.csv  vello-flatten-arcs-mpvg-nv-rtx-4090.csv  vello-flatten-arcs-nehab-timings-m1-pro.csv  vello-flatten-arcs-nehab-timings-nv-rtx-4090.csv  vello-flatten-arcs-test-scenes-m1-pro.csv  vello-flatten-arcs-test-scenes-nv-rtx-4090.csv  vello-flatten-lines-mpvg-m1-pro.csv  vello-flatten-lines-mpvg-nv-rtx-4090.csv  vello-flatten-lines-nehab-timings-m1-pro.csv  vello-flatten-lines-nehab-timings-nv-rtx-4090.csv  vello-flatten-lines-test-scenes-m1-pro.csv  vello-flatten-lines-test-scenes-nv-rtx-4090.csv
bench/src/: lib.rs  main.rs
bench/vello_results/: arcs-input-processing-m1-max.txt  arcs-nehab-timings-m1-pro.txt  arcs-nehab-timings-nv-rtx-4090.txt  arcs-test-scenes-m1-max.txt  arcs-test-scenes-m1-pro.txt  arcs-test-scenes-mali-g78.txt  arcs-test-scenes-nv-rtx-4090.txt  gpu-bump-counts.txt  lines-nehab-timings-mali-g78.txt  lines-nehab-timings-nv-gtx-980ti.txt  lines-nehab-timings-nv-rtx-4090.txt  lines-test-scenes-m1-max.txt  lines-test-scenes-mali-g78.txt  lines-test-scenes-nv-gtx-980ti.txt  lines-test-scenes-nv-rtx-4090.txt
bench/vello_results/strong/: arcs-m1-max.txt  arcs-mali-g78.txt  arcs-nv-gtx-980ti.txt  arcs-nv-rtx-4090.txt  lines-m1-max.txt  (+3 more)
beztoy/: Cargo.toml  Makefile  README.md
beztoy/src/: lib.rs
flatten/: Cargo.toml  README.md
flatten/src/: arc_segment.rs  cubic32.rs  cubic_err_plot.rs  euler.rs  euler32.rs  euler_arc.rs  evolute.rs  flatten.rs  flatten32.rs  lib.rs  main.rs  mmark.rs  perf_graph.rs  skia.rs  stroke.rs  svg.rs  to_rvg.rs
(+32 files in other folders)
