[package]
name = "vellobench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Arman Uguray <arman.uguray@gmail.com>"]
description = "GPU benchmarking tool for the vello renderer"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "vellobench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = "4.5.4"
pollster = { version = "0.3.0", features = ["macro"] }
wgpu = "0.20"
wgpu-profiler = "0.17.0"

scenes = { git = "https://github.com/linebender/vello.git", branch = "paper-revisions" }
vello = { git = "https://github.com/linebender/vello.git", branch = "paper-revisions", features = ["wgpu-profiler"] }
#scenes = { path = "../../vello/examples/scenes" }
#vello = { path = "../../vello/vello",  features = ["wgpu-profiler"] }

[package.metadata.android.sdk]
min_sdk_version = 34
target_sdk_version = 34
max_sdk_version = 34

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
