[package]
name = "beztoy"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = "0.1"
flatten = { path = "../flatten" }
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
xilem_web = { git = "https://github.com/linebender/xilem", rev = "51e77f5" }
